# electron

./: .gitignore  pyproject.toml
base/: models.py
config/: admin.py  settings.py  urls.py
config/migrations/branch_m/: 0001_initial.py  0002_alter_univerbranch_logo.py  0003_alter_univerbranch_options.py
config/migrations/employee_m/: 0001_initial.py  0002_initial.py  0003_historicalemployeeprofile.py
config/migrations/structure_m/: 0002_alter_univerbranch_logo.py  0003_alter_univerbranch_options.py  0004_department.py  0005_alter_department_title_short.py  0006_institute.py  0007_cathedra.py  0008_cathedra_institute.py
config/migrations/student_m/: 0001_initial.py  0002_initial.py  0003_historicalstudentprofile.py
config/migrations/user_m/: 0001_initial.py  0002_employee_student.py  0003_alter_user_options_alter_user_table_employeeprofile_and_more.py  0004_alter_employeeprofile_user_alter_studentprofile_user.py  0005_alter_employeeprofile_options_and_more.py  0006_alter_employeeprofile_gender.py  0007_studentprofile_gender.py  0008_employeeprofile_phone_number.py  0009_studentprofile_phone_number_and_more.py  0010_remove_employeeprofile_user_and_more.py
config/templates/: home.html
employee/: models.py
purchase/: models.py  serializers.py  urls.py  views.py
student/: models.py
univer/branch/: admin.py  apps.py
univer/employee/: admin.py  apps.py  models.py
univer/structure/: admin.py  apps.py  models.py
univer/student/: admin.py  apps.py  models.py
user/: admin.py  models.py
