[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
psycopg2 = "^2.9.9"
django-jazzmin = "^3.0.0"
django = "^5.0.7"
ruff = "^0.5.5"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}

[tool.ruff]
line-length = 250

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
