[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
psycopg2 = "^2.9.9"
django = "5.0"
ruff = "^0.5.5"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
django-jazzmin = "^3.0.0"
pillow = "^10.4.0"
django-unfold = "^0.38.0"
django-simple-history = "^3.7.0"
django-import-export = "^4.1.1"

[tool.ruff]
line-length = 250

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
